# magnum-capi-helm

./: .coveragerc  .gitignore  .stestr.conf  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: main.yaml  pr.yaml  tox.yaml
devstack/: plugin.sh
devstack/contrib/: new-devstack.sh
devstack/lib/: magnum-capi-helm
doc/: requirements.txt
doc/source/: conf.py
doc/source/_static/: capi_helm.conf.sample
doc/source/configuration/: config-reference.rst  index.rst
etc/oslo-config-generator/: capi_helm.conf
magnum_capi_helm/: __init__.py  conf.py  driver.py  driver_utils.py  helm.py  kubernetes.py
magnum_capi_helm/common/: README.rst  app_creds.py  ca_certificates.py  capi_monitor.py
magnum_capi_helm/tests/: test_driver.py  test_helm.py  test_kubernetes.py  test_magnum_capi_helm.py
magnum_capi_helm/tests/common/: test_app_creds.py  test_ca_certificates.py  test_capi_monitor.py
playbooks/: post.yaml  pre.yaml
releasenotes/notes/: add-cni-network-driver-a677f2514db975e0.yaml  cinder-volume-binding-mode-fc24de202303975c.yaml  cluster-label-registry-38de700e433df68a.yaml  prelude-1.4.0-1093690774fa034a.yaml  support-multiple-extra-networks-05d10102412e6388.yaml
releasenotes/source/: conf.py  index.rst
zuul.d/: base.yaml  jobs-v1-34.yaml  jobs-v1-35.yaml  nodeset.yaml  project-templates-tempest.yaml  project-templates.yaml  project.yaml  tempest-jobs-v1-34.yaml  tempest-jobs-v1-35.yaml
