[metadata]
name = magnum-capi-helm
summary = OpenStack Magnum driver using helm to create k8s clusters with Cluster API.
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://www.openstack.org/
python_requires = >=3.10
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    magnum_capi_helm

[entry_points]
magnum.drivers =
    k8s_capi_helm_v1 = magnum_capi_helm.driver:Driver
oslo.config.opts =
    capi_helm = magnum_capi_helm.conf:list_capi_opts
    capi_helm_cluster_labels = magnum_capi_helm.conf:list_capi_cluster_label_opts
